<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alarm Speaker</string>
    <string name="time_set">Set alarm time</string>
    <string name="speaker_settings">Speaker settings</string>
    <string name="tts_setting">Device TTS Settings</string>
    <string name="title_activity_about">About</string>
    <string name="Set">Set</string>
    <string name="title_activity_spset">Spset</string>
    <string name="good_morning">\"Good morning\"</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="save">Save</string>
    <string name="weather">\"The weather is...\"</string>
    <string name="asked_to_remind">\"You asked to remind about...\"</string>
    <string name="TODO_Edit">Edit TODO List</string>
    <string name="title_activity_todo">TODO</string>
    <string name="stop">Stop</string>
    <string name="git">Project on GitHub</string>


</resources>